# Server

./: .dockerignore  .env.example  .gitignore  10T1_attendance.xlsx  12T1_attendance.xlsx  CODEX_PROMPT_RAILWAY_REALTIME.md  Dockerfile  QUICK_START.md  README.md  TASK_1_COMPLETION_SUMMARY.md  docker-compose.yml  docker-compose.yml   encode_known_faces.py  esp32-8.ino  generate_esp32_config.py  init_databases.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  server.py  server_2.py  student_utils.py
.kiro/specs/esp32-cam-face-recognition-system/: .config.kiro  design.md  requirements.md  tasks.md
app/: config.py  database.py  main.py  models.py  schemas.py
app/routers/: api_keys.py  attendance.py  classes.py  students.py  ws_camera.py
app/services/: auth_service.py  face_service.py  socketio_service.py
app/templates/: api_keys.html  attendance.html  base.html  index.html  students.html
classes/10T1/: DS_10T1.xlsx  attendance.db  encodings.pkl  encodings_meta.json
classes/12T1/: DS_12T1.xlsx  attendance.db  encodings.npy  encodings.pkl  encodings_meta.json  names.npy
classes/DS/: DS_10T1.xlsx  DS_12T1.xlsx  ~$DS_10T1.xlsx
classes/_system/: admin_password  flask_secret_key
esp32/: config.h  esp32_cam_websocket.ino
esp32-8/: esp32-8.ino
scripts/: init_db.py  verify_setup.py
templates/: 404.html  500.html  add_student.html  api_keys.html  attendance.html  attendance_history.html  base.html  change_password.html  device_config.html  index.html  login.html  manage_classes.html
tests/: __init__.py  test_auth_service.py  test_face_service.py
