[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-face-recognition-attendance"
version = "1.0.0"
description = "ESP32-CAM Real-time Face Recognition Attendance System via Railway"
authors = [
    { name="Codex", email="codex@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-socketio>=5.11.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "python-multipart>=0.0.6",
    "face-recognition>=1.3.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "Pillow>=10.0.0",
    "python-jose[cryptography]>=3.3.0",
    "openpyxl>=3.1.0",
    "aiofiles>=23.2.0",
    "pydantic-settings>=2.1.0"
]
